Fixed JVM args